--- a/app/src/main/res/layout/activity_superhero_detail.xml
+++ b/app/src/main/res/layout/activity_superhero_detail.xml
@@ -56,9 +56,10 @@
                 android:id="@+id/tv_superhero_publisher"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="italic"
                 tools:text="Texto de prueba"
+                android:textColor="@color/publisher"
                 android:gravity="end"
                 android:paddingHorizontal="8dp"/>
 
